# brain-app

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLOUD-AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.do.yml  docker-compose.yml  eslint.config.js  fly.toml  newrelic.cjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  portless.json  start.sh  tsconfig.client.json  tsconfig.server.json  vite.config.ts  vitest.config.ts  vitest.enron-e2e.config.ts  vitest.eval.config.ts
desktop/: Cargo.toml  Info.plist  tauri.conf.json
desktop/binaries/: README.md
desktop/capabilities/: default.json
desktop/resources/: README.md
desktop/src/: brain_paths.rs  embedded.rs  fda.rs  lib.rs  native_port.rs  server_spawn.rs
desktop/src/bridge/: contacts.rs  cursor.rs  edits_window.rs  imessage.rs  keychain.rs  mod.rs  scheduler.rs  uploader.rs
docs/: BUGS.md  (+23 more)
ripmail/: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
ripmail/docs/: ARCHITECTURE.md  ASK-TESTING.md  ASK.md  BUGS.md  CLI_COPY.md  EXA.md  GMAIL_ARCHIVE_NOTES.md  IMAP-SYNC-BUG.md  OPPORTUNITIES.md  PERFORMANCE.md  RELEASING.md  RUST_PORT.md  STRATEGY.md  SYNC.md  VALIDATING_INSTALLATION.md  VISION.md  feedback-processed.md
ripmail/docs/bugs/: BUG-017-semantic-recall-gap-intent-queries.md  BUG-020-apple-spending-domain-from-routing.md  BUG-022-eval-judge-rejects-fixture-dates.md  BUG-026-who-nicknames-i18n-and-query-contract.md  BUG-033-actionable-file-not-found-errors.md  BUG-038-stats-inaccurate-threads-and-people.md  BUG-053-wizard-llm-provider-selection.md  BUG-054-gmail-imap-archive-noop.md  BUG-055-imap-archive-slow.md  BUG-056-wizard-bad-password-exits-instead-of-retry.md  BUG-058-whoami-wrong-identity-shared-mail.md  BUG-059-status-indexed-zero-during-imap-batch-fetch.md  BUG-061-google-drive-sync-hang-search-empty.md  BUG-062-archive-leading-dash-message-id-parsed-as-cli-flag.md
ripmail/docs/opportunities/: OPP-012-who-smart-address-book.md  OPP-017-code-health-idiomatic-patterns.md  OPP-026-realistic-imap-test-corpus-and-timestamp-shift.md  OPP-028-ripmail-home-permissions-and-data-lifecycle.md  OPP-029-compose-voice-context-from-sent-mail.md  (+14 more)
ripmail/examples/: parse_eml.rs
ripmail/skills/: README.md
ripmail/src/: agent_skill_install.rs  ask_stub.rs  brain_app_layout.rs  config.rs  draft.rs  draft_args.rs  ids.rs  inbox_window.rs  layout_migrate.rs  lib.rs  mail_category.rs  mail_read.rs  main.rs  mime_decode.rs  rebuild_index.rs  refresh.rs  rules.rs  runtime_limits.rs  setup.rs  status.rs  thread_view.rs
ripmail/tests/: BUG-039-REPRODUCTION.md  aaa_use_nextest.rs  ask_inbox_guards.rs  attachments_extract.rs  backfill_cli.rs  bug_039_repro.sh  calendar_cli.rs  calendar_sync_calendar_ids_regression.rs  clean_cli.rs  cli_invalid_subcommand_help.rs  config_schema_status.rs  draft_lazy_db.rs  first_backfill_onboarding.rs  gmail_api_live_send.rs  google_drive_tests.rs  inbox_scan.rs  local_dir_sync_search.rs  local_dir_xlsx_sync_search.rs  lock_clear_cli.rs  oauth_mailbox_draft_send_cli.rs  read_local_file_json_cli.rs  rules_cli.rs  search_fts.rs  send_drafts.rs  setup_cli.rs  setup_oauth_cli.rs  setup_read_rebuild.rs  setup_upsert.rs  sync_parse_maildir.rs  sync_run_fake_imap.rs  who_identity.rs  wizard_cli.rs
(+2565 files in other folders)
