[package]
name = "ripmail"
# Versioning: milestone bumps vs `X.Y.Z-YYYYMMDD.HHMMSS` (UTC) prereleases — see docs/RELEASING.md
version = "0.2.0"
edition = "2021"
description = "Agent-first email — Rust CLI"
default-run = "ripmail"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
# Use `bundled` only — `bundled-full` pulls `extra_check`, which errors on PRAGMAs that return rows.
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
dirs = "5.0"
chrono = "0.4"
mail-parser = "0.9"
htmd = "0.1"
libc = "0.2.183"
regex = "1.12.3"
rphonetic = "3"
strsim = "0.11"
phonenumber = "0.3"
rayon = "1.10"
calamine = "0.26"
docx-rs = "0.4"
serde_yaml = "0.9"
imap = { version = "3.0.0-alpha.15", default-features = true, features = ["native-tls"] }
async-openai = "0.27"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
base64 = "0.22"
ureq = { version = "2.12", default-features = true, features = ["json"] }
urlencoding = "2.1"
rand = "0.8"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.12"
inquire = "0.7"
indicatif = "0.17"
fs2 = "0.4.3"
sha2 = "0.11.0"
unicode-normalization = "0.1"
pdf_oxide = "0.3"
include_dir = "0.7"
ignore = "0.4"
globset = "0.4"
mime_guess = "2"

[dev-dependencies]
printpdf = "0.7"
rust_xlsxwriter = "0.79"
tempfile = "3.14"

[[bin]]
name = "ripmail"
path = "src/main.rs"

[[bin]]
name = "cargo-install-local"
path = "src/bin/cargo-install-local.rs"

[[bin]]
name = "applemail-explore"
path = "src/bin/applemail_explore.rs"

# Static OpenSSL in musl release binaries (GitHub Actions `cross` + `*-linux-musl`).
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lib]
name = "ripmail"
path = "src/lib.rs"
